2007-05-13  Vlad Seryakov  <seryakov@users.sf.net>

	* doc/src/nsv.man: Combined all nsv_ commands into one 
	file

2007-05-13  Stephen Deasey  <sdeasey@users.sf.net>

	* configure.in:
	* m4/cmmsg.m4:
	* m4/dns.m4:
	* m4/zlib.m4:
	* include/Makefile.global.in: Remove some depreciated autoconf macros
	and move more of the dns checks out of configure.in and into
	m4/dns.m4. Make sure only libnsd gets linked against libz and libcrypt.

2007-05-12  Vlad Seryakov  <seryakov@users.sf.net>

        nsd/adpparse.c:
        nsd/tclhttp.c: Silence compiler warnings
	sample-config.tcl.in: Updated with recent changes
	Makefile: made make dist to include all necessary file. Also
	add autogen.sh as well for anyone wh is willing to rebuild
	configure script on their systems

2007-04-30  Vlad Seryakov  <seryakov@users.sf.net>

        nsperm/nsperm.c:
        nsperm/init.tcl: Updated all commands to use Tcl_Objs, added 2 missing commands
        checkpass and setpass, added 2 new commands listusers and listgroups


2007-04-27  Vlad Seryakov  <seryakov@users.sf.net>

        ns include/ns.h: Similar to ns_int64 defined same types
        for 8, 16, 32 bits as well to have common basic types

2007-04-24  Vlad Seryakov  <seryakov@users.sf.net>

        * include/ns.h: Changed NS_SOCK_DROP to NS_SOCK_DONE, drop
        flag was never used anywhere
        * nsd/task.c: Added call when task is done with NS_SOCK_DONE for any
        actions required for proper task completion
        * nsd/sockcallback.c: Updated with new NS_SOCK_DONE flag

2007-04-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nscp/nscp.c: (GetLine) Changed size_t variable to int
	as size_t is unsigned on Windows and this makes troubles.

	* nsd/tclcallbacks.c: (Ns_TclEvalCallback) Added debug
	logging of the callback that is about to run.

2007-04-04  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd/driver.c: Changed WriterThread to use poll